# ece4-exp

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  DEMO.md  LICENSE  MANIFEST.in  QUICK_DEMO.sh  README.md  WHERE_IS_EVERYTHING.md  demo-gcm.yml  ece4-exp  ece4-recipe.sh  pyproject.toml  requirements.txt  setup.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
autosubmit/: README.md  asconf_vars.yml  compilation.yml  ecearth4_user_config.yml  hpc2020_platforms.yml
conda-recipe/: meta.yaml
docs/: CHANGES.md  experiment-config-example.yml
docs/presentation/: ece4-exp-intro.html  ece4-exp-intro.md
docs/source/: changelog.rst  conf.py  index.rst  reference.rst
ece4_exp/: cli.py  completion.py  generate-experiment-config.py  generate_experiment_config.py  init_config.py  paths.py  save_recipe_from_diff.py  yaml_util.py
ece4_exp/recipes/: OMIP_with_ERA5_6_Cycles.yml  ccycle-sr.yml
ece4_recipe/: generate-experiment-config.py  init-user-conf.py  paths.py  validate-experiment-config.py  yaml_util.py
presentation/: ece4-recipe-intro.html  ece4-recipe-intro.md
recipes/: aa2s.yml
recipes/weekly_tests/: amip-sr.yml  gcm-sr.yml  omip-sr.yml
scripts/: ece4-exp-completion.sh
templates/: bsc32_platforms.yml  ece4-recipe-completion.sh
tests/: conftest.py  test_cli.py  test_generate.py  test_save.py  test_yaml_util.py
